fix bug in get_jobs endpoint
